@@ -28,7 +28,6 @@ package bibliothek.gui.dock.themes.basic;
 
 import java.awt.Point;
 import java.awt.event.InputEvent;
-import java.awt.event.MouseAdapter;
 import java.awt.event.MouseEvent;
 
 import javax.swing.BorderFactory;
