@@ -1,4 +1,5 @@
 [Beta v1.0.0]
+-
 
 [Beta v1.0.01]
 - Bugfix: popup menu of a DockTitle did not open on right click under Windows XP
@@ -15,3 +16,4 @@
 - Bugfix: AbstractDockTitle did not calculate the correct position and size of its icon when explicitly asked
 - Bugfix: NPE thrown by SecureFlapWindow when closing the window a second time
 - API: delete some subclasses of Combiner which are no longer needed (Bubble/FlatCombiner)
+- Layout: BasicStationPaint now uses the highlight-background color of TextField to paint. That should look better with different look and feels.
